--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="carousel-item"><img src="/imgs/carousel3.png" alt=""></div>
             <div class="carousel-item"><img src="/imgs/carousel4.jpg" alt=""></div>
           </div>
-          <button class="carousel-control prev"><</button>
-          <button class="carousel-control next">></button>
+          <button class="carousel-control prev">&lt;</button>
+          <button class="carousel-control next">&gt;</button>
           <div class="carousel-indicators"></div>
         </div>
 
@@ -65,6 +65,70 @@
       </div>
     </div>
   </div>
+  <div class="home-page mobile">
+    <div class="page-header">
+      <div class="popup"><img src="/imgs/menu.png" alt="" class="openIcon"></div>
+      <div class="cart"><a href="cart.html"><img src="/imgs/shopping-cart.png" alt=""></a></div>
+    </div>
+    <div class="page-content">
+      <div class="page-wrapper">
+        <div class="search">
+          <div class="search-title">Minotaur</div>
+          <div class="search-box">
+            <input type="text" placeholder="Search..." name="" id="">
+            <a href="productList.html"><img src="" alt=""></a>
+          </div>
+        </div>
+
+    
+        <div class="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item"><img src="/imgs/carousel5.png" alt=""></div>
+            <div class="carousel-item"><img src="/imgs/carousel6.png" alt=""></div>
+            <div class="carousel-item"><img src="/imgs/carousel7.png" alt=""></div>
+            <div class="carousel-item"><img src="/imgs/carousel8.jpg" alt=""></div>
+          </div>
+          <button class="carousel-control prev">&lt;</button>
+          <button class="carousel-control next">&gt;</button>
+          <div class="carousel-indicators"></div>
+        </div>
+
+        <div class="active-moudles">
+          <div class="moudle">
+            <img src="" alt="">
+            <span>Toys</span>
+          </div>
+          <div class="moudle">
+            <img src="" alt="">
+            <span>Books</span>
+          </div>
+          <div class="moudle">
+            <img src="" alt="">
+            <span>Videos</span>
+          </div>
+          <div class="moudle">
+            <img src="" alt="">
+            <span>Games</span>
+          </div>
+        </div>
+        <div class="load-more">
+          Load more...
+        </div>
+        <div class="aside">
+          <div class="clone"><img src="" alt="" class="cloneIcon"></div>
+          <nav>
+            <li><a href="index.html"><span>Home</span> <span>></span></a></li>
+            <li><a href=""><span>Blog</span> <span>></span></a></li>
+            <li><a href=""><span>Postage</span> <span>></span></a></li>
+            <li><a href=""><span>Help/FAQ</span> <span>></span></a></li>
+            <li><a href=""><span>Contact</span> <span>></span></a></li>
+            <li><a href=""><span>Login</span> <span>></span></a></li>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
 <script src="./js/carousel.js"></script>
+<script src="./js/res.js"></script>
 </body>
 </html>
