--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 
         <div class="product-module">
           <div class="module">
-            <img src="" alt="">
+            <img src="/imgs/swords.png" alt="">
             <span>Toys</span>
           </div>
           <div class="module">
-            <img src="" alt="">
+            <img src="/imgs/open-book.png" alt="">
             <span>Books</span>
           </div>
           <div class="module">
-            <img src="" alt="">
+            <img src="/imgs/video-camera.png" alt="">
             <span>Videos</span>
           </div>
           <div class="module">
-            <img src="" alt="">
+            <img src="/imgs/games.png" alt="">
             <span>Games</span>
           </div>
         </div>
@@ -95,27 +95,27 @@
 
         <div class="active-moudles">
           <div class="moudle">
-            <img src="" alt="">
+            <img src="/imgs/swords.png" alt="">
             <span>Toys</span>
           </div>
           <div class="moudle">
-            <img src="" alt="">
+            <img src="/imgs/open-book.png" alt="">
             <span>Books</span>
           </div>
           <div class="moudle">
-            <img src="" alt="">
+            <img src="/imgs/video-camera.png" alt="">
             <span>Videos</span>
           </div>
           <div class="moudle">
-            <img src="" alt="">
+            <img src="/imgs/games.png" alt="">
             <span>Games</span>
           </div>
         </div>
         <div class="load-more">
           Load more...
         </div>
-        <div class="aside">
-          <div class="clone"><img src="" alt="" class="cloneIcon"></div>
+           <div class="aside">
+          <div class="close"><img src="/imgs/close.png" alt="" class="closeIcon"></div>
           <nav>
             <li><a href="index.html"><span>Home</span> <span>></span></a></li>
             <li><a href=""><span>Blog</span> <span>></span></a></li>
