--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homepage</title>
-    <link rel="stylesheet" href="./css/res.css">
-    <link rel="stylesheet" href="./css/index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>homepage</title>
+  <link rel="stylesheet" href="./css/res.css" />
+  <link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
-    <div class="home-page pc">
+
+  <div class="home-page pc">
     <div class="page-header">
       <div class="title">Minotaur</div>
-      <div class="cart"><a href="cart.html"><img src="/imgs/shopping-cart.png" alt="cart"></a></div>
+      <div class="cart">
+        <a href="cart.html"><img src="/imgs/shopping-cart.png" alt="cart" /></a>
+      </div>
     </div>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,18 +27,20 @@
         <li><a href="">Login</a></li>
       </ul>
     </nav>
+
     <div class="page-content">
       <div class="page-wrapper">
         <div class="search">
-          <input type="text" placeholder="Search..." name="" id="">
-          <a href="productList.html"><img src="/imgs/search.png" alt="search"></a>
+          <input type="text" placeholder="Search..." />
+          <a href="productList.html"><img src="/imgs/search.png" alt="search" /></a>
         </div>
+
         <div class="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item"><img src="/imgs/carousel1.png" alt=""></div>
-            <div class="carousel-item"><img src="/imgs/carousel2.png" alt=""></div>
-            <div class="carousel-item"><img src="/imgs/carousel3.png" alt=""></div>
-            <div class="carousel-item"><img src="/imgs/carousel4.jpg" alt=""></div>
+            <div class="carousel-item"><img src="/imgs/carousel1.png" alt="" /></div>
+            <div class="carousel-item"><img src="/imgs/carousel2.png" alt="" /></div>
+            <div class="carousel-item"><img src="/imgs/carousel3.png" alt="" /></div>
+            <div class="carousel-item"><img src="/imgs/carousel4.jpg" alt="" /></div>
           </div>
           <button class="carousel-control prev">&lt;</button>
           <button class="carousel-control next">&gt;</button>
@@ -42,51 +48,43 @@
         </div>
 
         <div class="product-module">
-          <div class="module">
-            <img src="/imgs/swords.png" alt="">
-            <span>Toys</span>
-          </div>
-          <div class="module">
-            <img src="/imgs/open-book.png" alt="">
-            <span>Books</span>
-          </div>
-          <div class="module">
-            <img src="/imgs/video-camera.png" alt="">
-            <span>Videos</span>
-          </div>
-          <div class="module">
-            <img src="/imgs/games.png" alt="">
-            <span>Games</span>
-          </div>
+          <div class="module"><img src="/imgs/swords.png" alt="" /><span>Toys</span></div>
+          <div class="module"><img src="/imgs/open-book.png" alt="" /><span>Books</span></div>
+          <div class="module"><img src="/imgs/video-camera.png" alt="" /><span>Videos</span></div>
+          <div class="module"><img src="/imgs/games.png" alt="" /><span>Games</span></div>
         </div>
-        <div class="load-more">
-          Load more...
-        </div>
+
+        <div class="load-more">Load more...</div>
       </div>
     </div>
   </div>
+
   <div class="home-page mobile">
     <div class="page-header">
-      <div class="popup"><img src="/imgs/menu.png" alt="" class="openIcon"></div>
-      <div class="cart"><a href="cart.html"><img src="/imgs/shopping-cart.png" alt=""></a></div>
+      <div class="popup">
+        <img src="/imgs/menu.png" alt="" class="openIcon" />
+      </div>
+      <div class="cart">
+        <a href="cart.html"><img src="/imgs/shopping-cart.png" alt="" /></a>
+      </div>
     </div>
+
     <div class="page-content">
       <div class="page-wrapper">
         <div class="search">
           <div class="search-title">Minotaur</div>
           <div class="search-box">
-            <input type="text" placeholder="Search..." name="" id="">
-            <a href="productList.html"><img src="" alt=""></a>
+            <input type="text" placeholder="Search..." />
+            <a href="productList.html"><img src="/imgs/search.png" alt="" /></a>
           </div>
         </div>
 
-    
         <div class="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item"><img src="/imgs/carousel5.png" alt=""></div>
-            <div class="carousel-item"><img src="/imgs/carousel6.png" alt=""></div>
-            <div class="carousel-item"><img src="/imgs/carousel7.png" alt=""></div>
-            <div class="carousel-item"><img src="/imgs/carousel8.jpg" alt=""></div>
+            <div class="carousel-item"><img src="/imgs/carousel5.png" alt="" /></div>
+            <div class="carousel-item"><img src="/imgs/carousel6.png" alt="" /></div>
+            <div class="carousel-item"><img src="/imgs/carousel7.png" alt="" /></div>
+            <div class="carousel-item"><img src="/imgs/carousel8.jpg" alt="" /></div>
           </div>
           <button class="carousel-control prev">&lt;</button>
           <button class="carousel-control next">&gt;</button>
@@ -94,41 +92,32 @@
         </div>
 
         <div class="active-moudles">
-          <div class="moudle">
-            <img src="/imgs/swords.png" alt="">
-            <span>Toys</span>
-          </div>
-          <div class="moudle">
-            <img src="/imgs/open-book.png" alt="">
-            <span>Books</span>
-          </div>
-          <div class="moudle">
-            <img src="/imgs/video-camera.png" alt="">
-            <span>Videos</span>
-          </div>
-          <div class="moudle">
-            <img src="/imgs/games.png" alt="">
-            <span>Games</span>
-          </div>
+          <div class="moudle"><img src="/imgs/swords.png" alt="" /><span>Toys</span></div>
+          <div class="moudle"><img src="/imgs/open-book.png" alt="" /><span>Books</span></div>
+          <div class="moudle"><img src="/imgs/video-camera.png" alt="" /><span>Videos</span></div>
+          <div class="moudle"><img src="/imgs/games.png" alt="" /><span>Games</span></div>
         </div>
-        <div class="load-more">
-          Load more...
-        </div>
-           <div class="aside">
-          <div class="close"><img src="/imgs/close.png" alt="" class="closeIcon"></div>
-          <nav>
-            <li><a href="index.html"><span>Home</span> <span>></span></a></li>
-            <li><a href=""><span>Blog</span> <span>></span></a></li>
-            <li><a href=""><span>Postage</span> <span>></span></a></li>
-            <li><a href=""><span>Help/FAQ</span> <span>></span></a></li>
-            <li><a href=""><span>Contact</span> <span>></span></a></li>
-            <li><a href=""><span>Login</span> <span>></span></a></li>
-          </nav>
-        </div>
+
+        <div class="load-more">Load more...</div>
       </div>
     </div>
+
+    <div class="aside">
+      <div class="close">
+        <img src="/imgs/close.png" alt="" class="closeIcon" />
+      </div>
+      <nav>
+        <li><a href="index.html"><span>Home</span> <span>></span></a></li>
+        <li><a href=""><span>Blog</span> <span>></span></a></li>
+        <li><a href=""><span>Postage</span> <span>></span></a></li>
+        <li><a href=""><span>Help/FAQ</span> <span>></span></a></li>
+        <li><a href=""><span>Contact</span> <span>></span></a></li>
+        <li><a href=""><span>Login</span> <span>></span></a></li>
+      </nav>
+    </div>
   </div>
-<script src="./js/carousel.js"></script>
-<script src="./js/res.js"></script>
+
+  <script src="./js/carousel.js"></script>
+  <script src="./js/res.js"></script>
 </body>
 </html>
