add the footer and adjust some overall style and js for carousel

--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div class="pc">
+  <div class="cart pc">
     <div class="page-header">
       <div class="title">Minotaur</div>
       <div class="cart">
@@ -38,7 +38,7 @@
   </div>
 
 
-  <div class="mobile">
+  <div class="cart mobile">
     <div class="page-header">
       <div class="popup">
         <img src="/imgs/menu.png" alt="" class="openIcon" />
