--- a/index.html
+++ b/index.html
@@ -57,6 +57,57 @@
         <div class="load-more">Load more...</div>
       </div>
     </div>
+
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-section about">
+          <h2>Minotaur</h2>
+          <p>
+            We are a hub of collectibles, anime, manga, games, and pop culture.<br>
+            Bringing fans closer to their passion, one item at a time.
+          </p>
+          <div class="social-icons">
+            <img src="/imgs/discord.png" alt="Discord" />
+            <img src="/imgs/instagram.png" alt="Instagram" />
+            <img src="/imgs/facebook.png" alt="Facebook" />
+            <img src="/imgs/twitter.png" alt="Twitter" />
+          </div>
+        </div>
+
+        <div class="footer-section">
+          <h3>Shop</h3>
+          <ul>
+            <li><a href="#">> New Arrivals</a></li>
+            <li><a href="#">> Best Sellers</a></li>
+            <li><a href="#">> Pre-orders</a></li>
+            <li><a href="#">> Limited Editions</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h3>Customer Support</h3>
+          <ul>
+            <li><a href="#">> Contact Us</a></li>
+            <li><a href="#">> FAQ</a></li>
+            <li><a href="#">> Shipping & Returns</a></li>
+            <li><a href="#">> Track Order</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h3>About</h3>
+          <ul>
+            <li><a href="#">> About Us</a></li>
+            <li><a href="#">> Careers</a></li>
+            <li><a href="#">> Store Locations</a></li>
+            <li><a href="#">> Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>All Rights Reserved</p>
+      </div>
+    </footer>
   </div>
 
   <div class="home-page mobile">
@@ -115,6 +166,60 @@
         <li><a href=""><span>Login</span> <span>></span></a></li>
       </nav>
     </div>
+
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-links">
+          <div class="footer-section">
+            <h3>Shop</h3>
+            <ul>
+              <li><a href="#">> New Arrivals</a></li>
+              <li><a href="#">> Best Sellers</a></li>
+              <li><a href="#">> Pre-orders</a></li>
+              <li><a href="#">> Limited Editions</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-section">
+            <h3>Customer Support</h3>
+            <ul>
+              <li><a href="#">> Contact Us</a></li>
+              <li><a href="#">> FAQ</a></li>
+              <li><a href="#">> Shipping & Returns</a></li>
+              <li><a href="#">> Track Order</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-section">
+            <h3>About</h3>
+            <ul>
+              <li><a href="#">> About Us</a></li>
+              <li><a href="#">> Careers</a></li>
+              <li><a href="#">> Store Locations</a></li>
+              <li><a href="#">> Privacy Policy</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-section about">
+          <h2>Minotaur</h2>
+          <p>
+            We are a hub of collectibles, anime, manga, games, and pop culture.<br>
+            Bringing fans closer to their passion, one item at a time.
+          </p>
+          <div class="social-icons">
+            <img src="/imgs/discord.png" alt="Discord" />
+            <img src="/imgs/instagram.png" alt="Instagram" />
+            <img src="/imgs/facebook.png" alt="Facebook" />
+            <img src="/imgs/twitter.png" alt="Twitter" />
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>All Rights Reserved</p>
+      </div>
+    </footer>
   </div>
 
   <script src="./js/carousel.js"></script>
