--- a/productList.html
+++ b/productList.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/res.css">
 </head>
 <body>
-    <div class="pc">
+    <div class=" productList pc">
     <div class="page-header">
       <div class="title">Minotaur</div>
       <div class="cart"><a href="cart.html"><img src="/imgs/shopping-cart.png" alt="cart"></a></div>
@@ -33,7 +33,7 @@
     </div>
     
     
-  <div class="goods-page mobile">
+  <div class="productList mobile">
         <div class="page-header">
             <div class="popup"><img src="/imgs/menu.png" alt="" class="openIcon"></div>
             <div class="cart"><a href="cart.html"><img src="/imgs/shopping-cart.png" alt=""></a></div>
@@ -54,11 +54,11 @@
                     <div class="filter" >
                         <div class="left" id="filters">
                             <span>Filters</span>
-                            <img src="./imgs/19.png" alt="">
+                            <img src="" alt="">
                         </div>
                         <div class="right">
                             <span>Sort options</span>
-                            <img src="./imgs/20.png" alt="">
+                            <img src="" alt="">
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
             <div class="aside">
                 <div class="close"><img src="/imgs/close.png" alt="" class="closeIcon"></div>
                 <nav>
-                    <li><a href=""><span>Home</span> <span>></span></a></li>
+                    <li><a href="index.html"><span>Home</span> <span>></span></a></li>
                     <li><a href=""><span>Blog</span> <span>></span></a></li>
                     <li><a href=""><span>Postage</span> <span>></span></a></li>
                     <li><a href=""><span>Help/FAQ</span> <span>></span></a></li>
