change some overall style and finish the list page

--- a/cart.html
+++ b/cart.html
@@ -19,20 +19,16 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Postage</a></li>
-        <li><a href="">Help/FAQ</a></li>
+        <li><a href="">Toys</a></li>
+        <li><a href="">Books</a></li>
+        <li><a href="">Videos</a></li>
+        <li><a href="">Games</a></li>
         <li><a href="">Contact</a></li>
-        <li><a href="">Login</a></li>
       </ul>
     </nav>
 
     <div class="page-content">
       <div class="page-wrapper">
-        <div class="search">
-          <input type="text" placeholder="Search..." />
-          <a href="productList.html"><img src="/imgs/search.png" alt="search" /></a>
-        </div>
       </div>
     </div>
   </div>
@@ -77,6 +73,7 @@
   </div>
 
 
-  <script src="./js/res.js"></script>
+  
+
 </body>
 </html>
