--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <img src="/imgs/menu.png" alt="" class="openIcon" />
       </div>
       <div class="cart">
-        <a href="cart.html"><img src="/imgs/shopping-cart.png" alt="" /></a>
+        <a href="cart.html"><img src="/imgs/shopping-cart(1).png" alt="" /></a>
       </div>
     </div>
 
@@ -221,6 +221,11 @@
       </div>
     </footer>
   </div>
+
+  <div id="page-loader">
+    <div class="spinner"></div>
+  </div>
+
 
   <script src="./js/carousel.js"></script>
   <script src="./js/res.js"></script>
