add some footer and animation

--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
           <div class="search-title">Minotaur</div>
           <div class="search-box">
             <input type="text" placeholder="Search..." />
-            <a href="productList.html"><img src="/imgs/search.png" alt="" /></a>
+            <a href="productList.html"><img src="imgs/search.png" alt="" /></a>
           </div>
         </div>
       </div>
@@ -73,7 +73,10 @@
   </div>
 
 
-  
+  <div id="page-loader">
+    <div class="spinner"></div>
+  </div>
 
 </body>
+<script src="./js/res.js"></script>
 </html>
