--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page-header">
       <div class="title">Minotaur</div>
       <div class="cart">
-        <a href="cart.html"><img src="/imgs/shopping-cart.png" alt="cart" /></a>
+        <a href="cart.html"><img src="imgs/shopping-cart.png" alt="cart" /></a>
       </div>
     </div>
 
@@ -32,15 +32,15 @@
       <div class="page-wrapper">
         <div class="search">
           <input type="text" placeholder="Search..." />
-          <a href="productList.html"><img src="/imgs/search.png" alt="search" /></a>
+          <a href="productList.html"><img src="imgs/search.png" alt="search" /></a>
         </div>
 
         <div class="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item"><img src="/imgs/carousel1.png" alt="" /></div>
-            <div class="carousel-item"><img src="/imgs/carousel2.png" alt="" /></div>
-            <div class="carousel-item"><img src="/imgs/carousel3.png" alt="" /></div>
-            <div class="carousel-item"><img src="/imgs/carousel4.jpg" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel1.png" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel2.png" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel3.png" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel4.jpg" alt="" /></div>
           </div>
           <button class="carousel-control prev">&lt;</button>
           <button class="carousel-control next">&gt;</button>
@@ -48,10 +48,10 @@
         </div>
 
         <div class="product-module">
-          <div class="module"><img src="/imgs/swords.png" alt="" /><span>Toys</span></div>
-          <div class="module"><img src="/imgs/open-book.png" alt="" /><span>Books</span></div>
-          <div class="module"><img src="/imgs/video-camera.png" alt="" /><span>Videos</span></div>
-          <div class="module"><img src="/imgs/games.png" alt="" /><span>Games</span></div>
+          <div class="module"><img src="imgs/swords.png" alt="" /><span>Toys</span></div>
+          <div class="module"><img src="imgs/open-book.png" alt="" /><span>Books</span></div>
+          <div class="module"><img src="imgs/video-camera.png" alt="" /><span>Videos</span></div>
+          <div class="module"><img src="imgs/games.png" alt="" /><span>Games</span></div>
         </div>
 
         <div class="load-more">Load more...</div>
@@ -67,10 +67,10 @@
             Bringing fans closer to their passion, one item at a time.
           </p>
           <div class="social-icons">
-            <img src="/imgs/discord.png" alt="Discord" />
-            <img src="/imgs/instagram.png" alt="Instagram" />
-            <img src="/imgs/facebook.png" alt="Facebook" />
-            <img src="/imgs/twitter.png" alt="Twitter" />
+            <img src="imgs/discord.png" alt="Discord" />
+            <img src="imgs/instagram.png" alt="Instagram" />
+            <img src="imgs/facebook.png" alt="Facebook" />
+            <img src="imgs/twitter.png" alt="Twitter" />
           </div>
         </div>
 
@@ -113,10 +113,10 @@
   <div class="home-page mobile">
     <div class="page-header">
       <div class="popup">
-        <img src="/imgs/menu.png" alt="" class="openIcon" />
+        <img src="imgs/menu.png" alt="" class="openIcon" />
       </div>
       <div class="cart">
-        <a href="cart.html"><img src="/imgs/shopping-cart(1).png" alt="" /></a>
+        <a href="cart.html"><img src="imgs/shopping-cart(1).png" alt="" /></a>
       </div>
     </div>
 
@@ -126,27 +126,28 @@
           <div class="search-title">Minotaur</div>
           <div class="search-box">
             <input type="text" placeholder="Search..." />
-            <a href="productList.html"><img src="/imgs/search.png" alt="" /></a>
+            <a href="productList.html"><img src="imgs/search.png" alt="" /></a>
           </div>
         </div>
 
         <div class="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item"><img src="/imgs/carousel5.png" alt="" /></div>
-            <div class="carousel-item"><img src="/imgs/carousel6.png" alt="" /></div>
-            <div class="carousel-item"><img src="/imgs/carousel7.png" alt="" /></div>
-            <div class="carousel-item"><img src="/imgs/carousel8.jpg" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel5.png" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel6.png" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel7.png" alt="" /></div>
+            <div class="carousel-item"><img src="imgs/carousel8.jpg" alt="" /></div>
           </div>
           <button class="carousel-control prev">&lt;</button>
           <button class="carousel-control next">&gt;</button>
+          
           <div class="carousel-indicators"></div>
         </div>
 
         <div class="active-moudles">
-          <div class="moudle"><img src="/imgs/swords.png" alt="" /><span>Toys</span></div>
-          <div class="moudle"><img src="/imgs/open-book.png" alt="" /><span>Books</span></div>
-          <div class="moudle"><img src="/imgs/video-camera.png" alt="" /><span>Videos</span></div>
-          <div class="moudle"><img src="/imgs/games.png" alt="" /><span>Games</span></div>
+          <div class="moudle"><img src="imgs/swords.png" alt="" /><span>Toys</span></div>
+          <div class="moudle"><img src="imgs/open-book.png" alt="" /><span>Books</span></div>
+          <div class="moudle"><img src="imgs/video-camera.png" alt="" /><span>Videos</span></div>
+          <div class="moudle"><img src="imgs/games.png" alt="" /><span>Games</span></div>
         </div>
 
         <div class="load-more">Load more...</div>
@@ -155,7 +156,7 @@
 
     <div class="aside">
       <div class="close">
-        <img src="/imgs/close.png" alt="" class="closeIcon" />
+        <img src="imgs/close.png" alt="" class="closeIcon" />
       </div>
       <nav>
         <li><a href="index.html"><span>Home</span> <span>></span></a></li>
@@ -208,10 +209,10 @@
             Bringing fans closer to their passion, one item at a time.
           </p>
           <div class="social-icons">
-            <img src="/imgs/discord.png" alt="Discord" />
-            <img src="/imgs/instagram.png" alt="Instagram" />
-            <img src="/imgs/facebook.png" alt="Facebook" />
-            <img src="/imgs/twitter.png" alt="Twitter" />
+            <img src="imgs/discord.png" alt="Discord" />
+            <img src="imgs/instagram.png" alt="Instagram" />
+            <img src="imgs/facebook.png" alt="Facebook" />
+            <img src="imgs/twitter.png" alt="Twitter" />
           </div>
         </div>
       </div>
