--- a/productList.html
+++ b/productList.html
@@ -12,7 +12,7 @@
     <div class="page-header">
       <div class="title">Minotaur</div>
       <div class="cart">
-        <a href="cart.html"><img src="/imgs/shopping-cart.png" alt="cart" /></a>
+        <a href="cart.html"><img src="imgs/shopping-cart.png" alt="cart" /></a>
       </div>
     </div>
     <nav>
@@ -29,7 +29,7 @@
       <div class="page-wrapper">
         <div class="search">
           <input type="text" placeholder="Search..." />
-          <a href="productList.html"><img src="/imgs/search.png" alt="search" /></a>
+          <a href="productList.html"><img src="imgs/search.png" alt="search" /></a>
         </div>
       </div>
       <div class="goods-filter">
@@ -46,30 +46,29 @@
                 <span id="maxPrice">$1000</span>
               </div>
             </div>
-
-            <li><input type="checkbox" /><span>Anime Figures</span></li>
-            <li><input type="checkbox" /><span>Gaming Merch</span></li>
-            <li><input type="checkbox" /><span>Limited Editions</span></li>
-            <li><input type="checkbox" /><span>Posters & Art</span></li>
-            <li><input type="checkbox" /><span>Collectibles</span></li>
-            <li><input type="checkbox" /><span>Trading Cards</span></li>
-            <li><input type="checkbox" /><span>Accessories</span></li>
-            <li><input type="checkbox" /><span>Vinyl Records</span></li>
-            <li><input type="checkbox" /><span>Plush Toys</span></li>
-            <li><input type="checkbox" /><span>Manga & Comics</span></li>
-            <li><input type="checkbox" /><span>Digital Downloads</span></li>
-
+            <ul>
+              <li><input type="checkbox" /><span>Anime Figures</span></li>
+              <li><input type="checkbox" /><span>Gaming Merch</span></li>
+              <li><input type="checkbox" /><span>Limited Editions</span></li>
+              <li><input type="checkbox" /><span>Posters & Art</span></li>
+              <li><input type="checkbox" /><span>Collectibles</span></li>
+              <li><input type="checkbox" /><span>Trading Cards</span></li>
+              <li><input type="checkbox" /><span>Accessories</span></li>
+              <li><input type="checkbox" /><span>Vinyl Records</span></li>
+              <li><input type="checkbox" /><span>Plush Toys</span></li>
+              <li><input type="checkbox" /><span>Manga & Comics</span></li>
+              <li><input type="checkbox" /><span>Digital Downloads</span></li>
+            </ul>
             <div class="apply-btn">
               <button type="button">Apply Filters</button>
             </div>
           </div>
         </div>
-
         <div class="results">
-          <div class="title">Results:4 products</div>
+          <div class="title">Results: 4 products</div>
           <div class="goods-body">
             <a class="item" href="">
-              <div class="top-img"><img src="/imgs/switch(1).jpg" alt="" /></div>
+              <div class="top-img"><img src="imgs/switch(1).jpg" alt="" /></div>
               <div class="bottom-content">
                 <div class="name">Nintendo Switch</div>
                 <div class="price">Price: $539.99</div>
@@ -77,7 +76,7 @@
               </div>
             </a>
             <a class="item" href="alarmo.html">
-              <div class="top-img"><img src="/imgs/alarmo(1).jpg" alt="" /></div>
+              <div class="top-img"><img src="imgs/alarmo(1).jpg" alt="" /></div>
               <div class="bottom-content">
                 <div class="name">Nintendo alarmo</div>
                 <div class="price">Price: $159.99</div>
@@ -85,7 +84,7 @@
               </div>
             </a>
             <a class="item" href="digivice.html">
-              <div class="top-img"><img src="/imgs/digivice(1).jpg" alt="" /></div>
+              <div class="top-img"><img src="imgs/digivice(1).jpg" alt="" /></div>
               <div class="bottom-content">
                 <div class="name">Digivice-25th</div>
                 <div class="price">Price: $259.99</div>
@@ -93,7 +92,7 @@
               </div>
             </a>
             <a class="item" href="">
-              <div class="top-img"><img src="/imgs/night(1).jpg" alt="" /></div>
+              <div class="top-img"><img src="imgs/night(1).jpg" alt="" /></div>
               <div class="bottom-content">
                 <div class="name">Witch on the Holy Night</div>
                 <div class="price">Price: $99.99</div>
@@ -103,14 +102,58 @@
           </div>
         </div>
       </div>
-      <div class="load-more">Load more...</div>
+      <div class="load-more">Explore more...</div>
     </div>
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-section about">
+          <h2>Minotaur</h2>
+          <p>We are a hub of collectibles, anime, manga, games, and pop culture.<br>Bringing fans closer to their passion, one item at a time.</p>
+          <div class="social-icons">
+            <img src="imgs/discord.png" alt="Discord" />
+            <img src="imgs/instagram.png" alt="Instagram" />
+            <img src="imgs/facebook.png" alt="Facebook" />
+            <img src="imgs/twitter.png" alt="Twitter" />
+          </div>
+        </div>
+        <div class="footer-section">
+          <h3>Shop</h3>
+          <ul>
+            <li><a href="#">> New Arrivals</a></li>
+            <li><a href="#">> Best Sellers</a></li>
+            <li><a href="#">> Pre-orders</a></li>
+            <li><a href="#">> Limited Editions</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Customer Support</h3>
+          <ul>
+            <li><a href="#">> Contact Us</a></li>
+            <li><a href="#">> FAQ</a></li>
+            <li><a href="#">> Shipping & Returns</a></li>
+            <li><a href="#">> Track Order</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>About</h3>
+          <ul>
+            <li><a href="#">> About Us</a></li>
+            <li><a href="#">> Careers</a></li>
+            <li><a href="#">> Store Locations</a></li>
+            <li><a href="#">> Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>All Rights Reserved</p>
+      </div>
+    </footer>
   </div>
 
   <div class="productList mobile">
     <div class="page-header">
-      <div class="popup"><img src="/imgs/menu.png" alt="" class="openIcon" /></div>
-      <div class="cart"><a href="cart.html"><img src="/imgs/shopping-cart(1).png" alt="" /></a></div>
+      <div class="popup"><img src="imgs/menu.png" alt="" class="openIcon" /></div>
+      <div class="cart"><a href="cart.html"><img src="imgs/shopping-cart(1).png" alt="" /></a></div>
     </div>
     <div class="page-content">
       <div class="page-wrapper">
@@ -118,62 +161,51 @@
           <div class="search-title">Minotaur</div>
           <div class="search-box">
             <input type="text" placeholder="Search..." />
-            <a href="productList.html"><img src="/imgs/search.png" alt="" /></a>
+            <a href="productList.html"><img src="imgs/search.png" alt="" /></a>
           </div>
         </div>
       </div>
       <div class="goods-filter">
         <div class="results">
-          <div class="title">Results:4 products</div>
+          <div class="title">Results: 4 products</div>
           <div class="filter">
-            <div class="left" id="filters">
-              <span>Filters</span>
-              <img src="/imgs/filter.png" alt="" />
+            <div class="left filter-dropdown">
+              <div class="filter-toggle">
+                <span class="filter-label">Filters</span>
+                <img src="imgs/filter.png" alt="" class="filter-icon" />
+              </div>
+              <ul class="filter-menu">
+                <li>Anime Figures</li>
+                <li>Gaming Merch</li>
+                <li>Limited Editions</li>
+                <li>Plush Toys</li>
+              </ul>
             </div>
-            <div class="right">
-              <span>Sort options</span>
-              <img src="/imgs/arrow-down-sign-to-navigate.png" alt="" />
+            <div class="right sort-dropdown">
+              <div class="sort-toggle">
+                <span>Sort options</span>
+                <img src="imgs/arrow-down-sign-to-navigate.png" alt="" />
+              </div>
+              <ul class="sort-menu">
+                <li>Price: Low to High</li>
+                <li>Price: High to Low</li>
+                <li>Name: A to Z</li>
+                <li>Name: Z to A</li>
+              </ul>
             </div>
           </div>
           <div class="goods-body">
-            <a class="item" href="">
-              <div class="top-img"><img src="/imgs/switch(1).jpg" alt="" /></div>
-              <div class="bottom-content">
-                <div class="name">Nintendo Switch</div>
-                <div class="price">Price: $539.99</div>
-                <div class="status">Out of stock</div>
-              </div>
-            </a>
-            <a class="item" href="alarmo.html">
-              <div class="top-img"><img src="/imgs/alarmo(1).jpg" alt="" /></div>
-              <div class="bottom-content">
-                <div class="name">Nintendo alarmo</div>
-                <div class="price">Price: $159.99</div>
-                <div class="status green">In stock</div>
-              </div>
-            </a>
-            <a class="item" href="digivice.html">
-              <div class="top-img"><img src="/imgs/digivice(1).jpg" alt="" /></div>
-              <div class="bottom-content">
-                <div class="name">Digivice-25th</div>
-                <div class="price">Price: $259.99</div>
-                <div class="status green">In stock</div>
-              </div>
-            </a>
-            <a class="item" href="">
-              <div class="top-img"><img src="/imgs/night(1).jpg" alt="" /></div>
-              <div class="bottom-content">
-                <div class="name">Witch on the Holy Night</div>
-                <div class="price">Price: $99.99</div>
-                <div class="status">Out of stock</div>
-              </div>
-            </a>
+            <!-- Items same as PC version -->
+            <a class="item" href=""><div class="top-img"><img src="imgs/switch(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Nintendo Switch</div><div class="price">Price: $539.99</div><div class="status">Out of stock</div></div></a>
+            <a class="item" href="alarmo.html"><div class="top-img"><img src="imgs/alarmo(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Nintendo alarmo</div><div class="price">Price: $159.99</div><div class="status green">In stock</div></div></a>
+            <a class="item" href="digivice.html"><div class="top-img"><img src="imgs/digivice(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Digivice-25th</div><div class="price">Price: $259.99</div><div class="status green">In stock</div></div></a>
+            <a class="item" href=""><div class="top-img"><img src="imgs/night(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Witch on the Holy Night</div><div class="price">Price: $99.99</div><div class="status">Out of stock</div></div></a>
           </div>
         </div>
       </div>
-      <div class="load-more">Load more...</div>
+      <div class="load-more">Explore more...</div>
       <div class="aside">
-        <div class="close"><img src="/imgs/close.png" alt="" class="closeIcon" /></div>
+        <div class="close"><img src="imgs/close.png" alt="" class="closeIcon" /></div>
         <nav>
           <li><a href="index.html"><span>Home</span> <span>></span></a></li>
           <li><a href=""><span>Blog</span> <span>></span></a></li>
@@ -183,17 +215,55 @@
           <li><a href=""><span>Login</span> <span>></span></a></li>
         </nav>
       </div>
-      <div class="filAside aside">
-        <div class="close"><img src="/imgs/close.png" alt="" class="closeIcon1" /></div>
-        <nav>
-          <li><a href="productList.html"><span>Product</span> <span>></span></a></li>
-          <li><a href=""><span>Brand</span> <span>></span></a></li>
-          <li><a href=""><span>Color</span> <span>></span></a></li>
-          <li><a href=""><span>Availability</span> <span>></span></a></li>
-        </nav>
-      </div>
+      <footer class="site-footer">
+        <div class="footer-container">
+          <div class="footer-links">
+            <div class="footer-section">
+              <h3>Shop</h3>
+              <ul>
+                <li><a href="#">> New Arrivals</a></li>
+                <li><a href="#">> Best Sellers</a></li>
+                <li><a href="#">> Pre-orders</a></li>
+                <li><a href="#">> Limited Editions</a></li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>Customer Support</h3>
+              <ul>
+                <li><a href="#">> Contact Us</a></li>
+                <li><a href="#">> FAQ</a></li>
+                <li><a href="#">> Shipping & Returns</a></li>
+                <li><a href="#">> Track Order</a></li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>About</h3>
+              <ul>
+                <li><a href="#">> About Us</a></li>
+                <li><a href="#">> Careers</a></li>
+                <li><a href="#">> Store Locations</a></li>
+                <li><a href="#">> Privacy Policy</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-section about">
+            <h2>Minotaur</h2>
+            <p>We are a hub of collectibles, anime, manga, games, and pop culture.<br>Bringing fans closer to their passion, one item at a time.</p>
+            <div class="social-icons">
+              <img src="imgs/discord.png" alt="Discord" />
+              <img src="imgs/instagram.png" alt="Instagram" />
+              <img src="imgs/facebook.png" alt="Facebook" />
+              <img src="imgs/twitter.png" alt="Twitter" />
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>All Rights Reserved</p>
+        </div>
+      </footer>
     </div>
   </div>
+
   <div id="page-loader">
     <div class="spinner"></div>
   </div>
