change the filters

--- a/alarmo.html
+++ b/alarmo.html
@@ -13,7 +13,7 @@
     <div class="goods-detail-page pc">
         <div class="page-header">
             <div class="title">Minotaur</div>
-            <div class="cart"><a href="cart.html"><img src="" alt=""></a></div>
+            <div class="cart"><a href="cart.html"><img src="imgs/shopping-cart.png" alt=""></a></div>
         </div>
         <nav>
             <ul>
@@ -29,11 +29,11 @@
             <div class="page-wrapper">
                 <div class="search">
                     <input type="text" placeholder="Search..." name="" id="">
-                    <a href="goods.html"><img src="" alt=""></a>
+                    <a href="productList.html"><img src="/imgs/search.png" alt=""></a>
                 </div>
                 <div class="goods-detail">
                     <div class="left">
-                        <img src="" alt="">
+                        <img src="imgs/alarmo.jpg" alt="">
                         <div class="des">
                             <div class="description">Description</div>
                             <div class="dess">Make waking up fun with Nintendo Sound Clock: 
@@ -70,8 +70,8 @@
     </div>
     <div class="goods-detail-page mobile">
         <div class="page-header">
-            <div class="popup"><img src="" alt="" class="openIcon"></div>
-            <div class="cart"><img src="" alt=""></div>
+            <div class="popup"><img src="imgs/menu.png" alt="" class="openIcon"></div>
+            <div class="cart"><img src="imgs/shopping-cart(1).png" alt=""></div>
         </div>
         <div class="page-content">
             <div class="page-wrapper">
@@ -79,12 +79,12 @@
                     <div class="search-title">Minotaur</div>
                     <div class="search-box">
                         <input type="text" placeholder="Search..." name="" id="">
-                        <a href="goods.html"><img src="" alt=""></a>
+                        <a href="productList.html"><img src="imgs/search.png" alt=""></a>
                     </div>
                 </div>
                 <div class="goods-detail">
                     <div class="left">
-                        <img src="" alt="">
+                        <img src="imgs/alarmo.jpg" alt="">
                     </div>
                     <div class="right">
                         <div class="name">Nintendo alarmo</div>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="aside">
-                    <div class="clone"><img src="" alt="" class="cloneIcon"></div>
+                    <div class="close"><img src="imgs/close.png" alt="" class="closeIcon"></div>
                     <nav>
                         <li><a href="index.html"><span>Home</span> <span>></span></a></li>
                         <li><a href=""><span>Blog</span> <span>></span></a></li>
