add some comments to the code

--- a/alarmo.html
+++ b/alarmo.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="goods-detail-page pc">
+    <!-- desktop version -->
+    <div class="productPage pc">
         <div class="page-header">
             <div class="title">Minotaur</div>
             <div class="cart"><a href="cart.html"><img src="imgs/shopping-cart.png" alt=""></a></div>
@@ -68,7 +69,8 @@
             </div>
         </div>
     </div>
-    <div class="goods-detail-page mobile">
+    <!-- mobile version -->
+    <div class="productPage mobile">
         <div class="page-header">
             <div class="popup"><img src="imgs/menu.png" alt="" class="openIcon"></div>
             <div class="cart"><img src="imgs/shopping-cart(1).png" alt=""></div>
