--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/res.css" />
 </head>
 <body>
-
+  <!-- desktop version -->
   <div class="cart pc">
     <div class="page-header">
       <div class="title">Minotaur</div>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-
+  <!-- mobile version -->
   <div class="cart mobile">
     <div class="page-header">
       <div class="popup">
