--- a/productList.html
+++ b/productList.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/productList.css" />
 </head>
 <body>
+  <!-- desktop version -->
   <div class="productList pc">
     <div class="page-header">
       <div class="title">Minotaur</div>
@@ -148,7 +149,7 @@
       </div>
     </footer>
   </div>
-
+  <!-- mobile version -->
   <div class="productList mobile">
     <div class="page-header">
       <div class="popup"><img src="imgs/menu.png" alt="" class="openIcon" /></div>
