--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
-
+  <!-- desktop version -->
   <div class="home-page pc">
     <div class="page-header">
       <div class="title">Minotaur</div>
@@ -109,7 +109,7 @@
       </div>
     </footer>
   </div>
-
+  <!-- mobile version -->
   <div class="home-page mobile">
     <div class="page-header">
       <div class="popup">
